Changes:
1. Update site class (fix issue in redirect method prev parameter not working)
2. Update site class (fix double slashes after base url)
3. Add sqlite drive
4. Update Query class => {
     a => Fix prepareWhere method
     b => Support DISTINCT in select query
}
5. Add view function in functions.php
6. Added getInput method in Router class
7. Allow to get input using $this->input properity in controller
8. Adding comments in Router & Controller class
9. Update getInput method form Router class (Add missing argument)